kubernetes/workspace-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workspaces
  labels:
    name: workspaces
    purpose: employee-workspaces
